cluster/apps/ci/tekton/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton
  namespace: tekton-pipelines
spec:
  ingressClassName: nginx
  rules:
    - host: tekton.skylab.fi
      http:
        paths:
          - backend:
              service:
                name: tekton-dashboard
                port:
                  number: 9097
            path: '/'
            pathType: Prefix
  tls:
    - hosts:
        - "tekton.skylab.fi"
      secretName: skylab.fi-tls
